Cambios a la logica